sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:97: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (res >= 0) return res;
  ^